--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <section class="hero">
 
     <div class="hero-headline-wrapper">
-      <h1 class="hero-headline">Hello, I&rsquo;m a big hero section for your portfolio!</h1>
+      <h1 class="hero-headline">Hello, I&rsquo;m Mia! </h1>
     </div>
 
   </section>
